--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="img-banner">Exclusive</div>
         <div class="caption">
           <p>Skiving in Scandinavia? Relax with a latte at Hygge Lounge.</p>
+          <button>Book</button>
         </div>
       </section>
 
@@ -51,6 +52,7 @@
         />
         <div class="caption">
           <p>Bored in Barcelona? Take a siesta at the Sky Garden.</p>
+          <button>Book</button>
         </div>
       </section>
 
@@ -62,6 +64,7 @@
         />
         <div class="caption">
           <p>Relaxing in Rio? Take some downtime at the Generator Hub.</p>
+          <button>Book</button>
         </div>
       </section>
     </main>
